--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-hacker
+title: zhujunan.github.io
+description: my personal homepage
+show_downloads: false
+theme: jekyll-theme-leap-day
