--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: zhujunan.github.io
-description: my personal homepage
+description: welcome to my github pages
 show_downloads: false
 theme: jekyll-theme-leap-day
