--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: zhujunan.github.io
-description: welcome to my github pages
+title: My Github Pages
+description: welcome to 
 show_downloads: false
 theme: jekyll-theme-leap-day
