--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: My Github Pages
-description: welcome to 
+description: welcome to my github pages
 show_downloads: false
 theme: jekyll-theme-leap-day
