--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-leap-day
-title: Leap Day theme
+title: My Github Pages
 description: welcome to my github pages
 show_downloads: false
